# Movie-Recommeder

./: CMakeLists.txt  README.md
databaseInfo/: IMDB-Top-1000-Movies(2018).csv
header/: Filter.h  database.h  driver.h  filter.h  movieRecord.h  movies.h  moviesList.h
include/: database.h  movieRecord.h
lib/: database.cpp
src/: CMakeLists.txt  Driver.cpp  Filter.cpp  database.cpp  driver.cpp  filter.cpp  main.cpp  movies.cpp  moviesList.cpp
tests/: CMakeLists.txt  database_test.cpp  filter_test.cpp  moviesList_test.cpp  movies_test.cpp  test1.cpp
